tests/005_tls_cfg/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: 005-tls
spec:
  ingressClassName: zproxy-ingress

  tls:
  - hosts:
    - 005.tls
    secretName: tls-cert
  - hosts:
    - 005.pem
    secretName: pem-cert
  - hosts:
    - 005.not.found
    secretName: tls-cert-2

  rules:
  - host: 005.tls
    http:
      paths:
      - path: /uri1
        backend:
          serviceName: app-svc
          servicePort: 80

      - path: /uri2
        backend:
          serviceName: app-svc
          servicePort: 80

  - host: 005.pem
    http:
      paths:
      - path: /
        backend:
          serviceName: app-svc
          servicePort: 80

  - host: 005.default
    http:
      paths:
      - path: /
        backend:
          serviceName: app-svc
          servicePort: 80
